Add demo and comparison

--- a/arangodb.bib
+++ b/arangodb.bib
@@ -64,3 +64,34 @@ titleaddon = {ArangoDB Homepage},
 url = {https://www.arangodb.com/why-arangodb/cluster/},
 urldate = {2020-04-10}
 }
+
+@misc{DBEnginesComparisons,
+title = {{System Properties Comparison ArangoDB vs. MongoDB vs. Neo4j}},
+titleaddon = {DB-Engines},
+url = {https://db-engines.com/en/system/ArangoDB%3BMongoDB%3BNeo4j},
+urldate = {2020-04-10}
+}
+@misc{DBBenchmark,
+title = {{NoSQL Performance Benchmark 2018 – MongoDB, PostgreSQL, OrientDB, Neo4j and ArangoDB}},
+titleaddon = {ArangoDB Homepage},
+url = {https://www.arangodb.com/2018/02/nosql-performance-benchmark-2018-mongodb-postgresql-orientdb-neo4j-arangodb/},
+urldate = {2020-04-10}
+}
+@misc{ArangoVSMongo,
+title = {{What you can't do with MongoDB}},
+titleaddon = {ArangoDB Homepage},
+url = {https://www.arangodb.com/why-arangodb/arangodb-vs-mongodb/},
+urldate = {2020-04-10}
+}
+@misc{ArangoVSNeo4j,
+title = {{What you can't do with Neo4j}},
+titleaddon = {ArangoDB Homepage},
+url = {https://www.arangodb.com/why-arangodb/arangodb-vs-neo4j/},
+urldate = {2020-04-10}
+}
+@misc{Pokec,
+title = {{Pokec social network}},
+titleaddon = {Stanford University SNAP},
+url = {https://snap.stanford.edu/data/soc-pokec.html},
+urldate = {2020-04-10}
+}
