--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 \definecolor{ArangoNumberColor}{HTML}{0300cd}
 \lstdefinelanguage{ArangoQL}{
   sensitive=false,
-  morekeywords={FOR,IN,FILTER,OUTBOUND,RETURN,SORT,LIMIT,SEARCH,ASC,DESC},
+  morekeywords={FOR,IN,FILTER,OUTBOUND,RETURN,SORT,LIMIT,SEARCH,ASC,DESC,COLLECT,INTO,LET,AND},
   keywordstyle=\color{ArangoKeywordColor},
   morekeywords={[2]PHRASE,ANALYZER,STARTS_WITH,TFIDF,BM25,TOKENS},
   keywordstyle=[2]\color{ArangoFuncColor},
