Fix acros in text

--- a/acros.tex
+++ b/acros.tex
@@ -1,2 +1,3 @@
 \newacronym{aql}{AQL}{ArangoDB Query Language}
+\newacronym{sql}{SQL}{Structured Query Language}
 \newacronym{tf-idf}{TF-IDF}{Term Frequence-Inverse Document Frequency}
