Abstract and matr nr.s

--- a/main.tex
+++ b/main.tex
@@ -55,12 +55,12 @@
 \shorttitle{ArangoDB}
 \date{\today}
 
-\author{TBD \and TBD \and 8786673}
+\author{7695507, 3711191 and 8786673}
 \affiliation{New DB Technologies -- Duale Hochschule Baden-Württemberg, Stuttgart}
 
 \keywords{ArangoDB, database, multi-model, NoSQL, graph}
 
-\abstract{ArangoDB is NoSQL database with a multi-model paradigm. In this paper we will demonstrate its characteristics and features. We will compare it to traditional SQL mechanisms and compare it with other NoSQL databases.}
+\abstract{ArangoDB is NoSQL database with a multi-model paradigm. In this paper we will demonstrate its characteristics and features. We will compare it with traditional SQL mechanisms and with other NoSQL databases.}
 
 \begin{document}
 \maketitle
