--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,20 @@
 
 \include{content}
 
+\appendix
+
+\section{Figures}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.9\textwidth]{images/erm.png}
+  \caption{An examplary ERM of a book shop}
+  \label{fig:book_shop_erm}
+\end{figure}
+
+\newpage
 \printnoidxglossary[type=\acronymtype,numberedsection=autolabel]
+
+\newpage
 \printbibliography{}
 
 \end{document}
